--- a/PackageEasy/PackageEasy/Views/Tools/AboutControl.xaml
+++ b/PackageEasy/PackageEasy/Views/Tools/AboutControl.xaml
@@ -21,8 +21,8 @@
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0" Visibility="Visible" >
                 <TextBlock Text="产品说明:" lang:LanguageManager.LangText="产品说明:" FontSize="14"></TextBlock>
-                <TextBlock  TextWrapping="WrapWithOverflow" Margin="6,0,0,0" MaxWidth="529"  Text="因为NSIS的打包脚本学习曲线陡峭，HM SOFT 在生成脚本后，可视化调整比较麻烦，所以在做了这个工具来方便大家,做的不好的请见谅，为爱发电!"
-                          lang:LanguageManager.LangText="因为NSIS的打包脚本学习曲线陡峭，HM SOFT 在生成脚本后，可视化调整比较麻烦，所以在做了这个工具来方便大家,做的不好的请见谅，为爱发电!" FontSize="14"></TextBlock>
+                <TextBlock  TextWrapping="WrapWithOverflow" Margin="6,0,0,0" MaxWidth="529"  Text="因为NSIS的打包脚本学习曲线陡峭，HM NIS Edit 在生成脚本后，可视化调整比较麻烦，所以在做了这个工具来方便大家,做的不好的请见谅，为爱发电!"
+                          lang:LanguageManager.LangText="因为NSIS的打包脚本学习曲线陡峭，HM NIS Edit 在生成脚本后，可视化调整比较麻烦，所以在做了这个工具来方便大家,做的不好的请见谅，为爱发电!" FontSize="14"></TextBlock>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                 <TextBlock Text="GitHub:" lang:LanguageManager.LangText="GitHub:" FontSize="14"></TextBlock>
