add  新增支持密码保护
add 支持加密文件和解密文件切换
add 新增pky加密格式

--- a/PackageEasy/PackageEasy/App.xaml
+++ b/PackageEasy/PackageEasy/App.xaml
@@ -21,6 +21,7 @@
                 <ResourceDictionary Source="/Styles/DataGrid.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Styles/Menu.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Styles/Converters.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Styles/PasswordBoxStyle.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
