fix  新增相对路径目录

--- a/PackageEasy/PackageEasy/Styles/Converters.xaml
+++ b/PackageEasy/PackageEasy/Styles/Converters.xaml
@@ -4,4 +4,5 @@
     <converters:ButtonTypeToBoolConverter x:Key="ButtonTypeToBoolConverter"></converters:ButtonTypeToBoolConverter>
     <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"></converters:BoolToVisibilityConverter>
     <converters:Base64ToImageConverter x:Key="Base64ToImageConverter"></converters:Base64ToImageConverter>
+    <converters:BoolRevolveConverter x:Key="BoolRevolveConverter"></converters:BoolRevolveConverter>
 </ResourceDictionary>
